# ft_printf

./: CMakeLists.txt  Makefile  a.out  author  main-1.c  main.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
include/: conversions.h  float_to_str.h  floats.h  ft_list.h  ft_printf.h  ft_string.h  libft.h  misc.h
libft/include/: conversions.h  ft_list.h  ft_printf.h  ft_string.h  libft.h
libft/src/printf/: f_conversion.c  ft_itoa_base_hex..c  ft_printf.c  get_conv_glags.c  get_float.c  print_conversion.c  s_conversion.c
libft/src/string/: ft_memcpy.c  ft_strnew.c
src/list/: ft_lstadd.c  ft_lstnew.c
src/printf/: c_conversions.c  convert_flags.c  d_conversions.c  f_conversion.c  f_conversions.c  float_to_str.c  ft_after_num.c  ft_before_num.c  ft_itoa_base.c  ft_itoa_base_hex..c  ft_itoa_base_hex_long.c  ft_printf.c  get_conv_glags.c  get_conversion.c  get_flags.c  get_float.c  main-1.c  make_double.c  make_ldouble.c  mod_conversions.c  o_conversions.c  p_conversions.c  print_conversion.c  s_conversion.c  u_conversion.c  x_conversions.c
src/string/: fill_with_chars.c  ft_lst_to_str.c  ft_memcpy.c  ft_realloc.c  ft_strchr.c  ft_strjoin.c  ft_strlen.c  ft_strncpy.c  ft_strnew.c  ft_strsub.c
